<resources>
    <string name="app_name">My Application</string>
    <string name="gambar1">TODO</string>
    <string name="clik">Clik!</string>
    <string name="teks1">TODO</string>
    <string name="gambar5">TODO</string>
    <string name="gambar6">TODO</string>
    <string name="gambar8">TODO</string>
    <string name="open">OPEN</string>
    <string name="gambar4">TODO</string>
    <string name="gambar10">TODO</string>
    <string name="gambar11">TODO</string>
    <string name="gambar12">TODO</string>
    <string name="gambar14">TODO</string>
    <string name="gambar15">TODO</string>
    <string name="gambar17">TODO</string>
    <string name="gambar18">TODO</string>
    <string name="gambar16">TODO</string>
    <string name="imageview7">TODO</string>
    <string name="imageview">TODO</string>
    <string name="imageview8">TODO</string>
    <string name="image11">TODO</string>
    <string name="image10">TODO</string>
    <string name="image12">TODO</string>
    <string name="image16">TODO</string>
    <string name="image13">TODO</string>
    <string name="image14">TODO</string>
    <string name="image15">TODO</string>
    <string name="image9">TODO</string>
    <string name="image18">TODO</string>
    <string name="image19">TODO</string>
    <string name="image6">TODO</string>
    <string name="image17">TODO</string>
    <string name="tanggal">Tanggal :</string>
    <string name="waktu">Waktu :</string>
    <string name="image29">TODO</string>
    <string name="image28">TODO</string>
    <string name="image27">TODO</string>
    <string name="tanggal1">Tanggal :</string>
    <string name="waktu1">Waktu :</string>
    <string name="date">Tanggal :</string>
    <string name="time">Waktu :</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="imagee">TODO</string>
    <string name="teks4">TODO</string>
    <string name="teks5">TODO</string>
    <string name="teks6">TODO</string>
    <string name="teks7">0 mg/L</string>
    <string name="teks">0℃</string>
    <string name="tekss">0℃</string>
    <string name="view1">TODO</string>
    <string name="image3">TODO</string>
    <string name="image2">TODO</string>
    <string name="image4">TODO</string>
    <string name="image7">TODO</string>
    <string name="image8">TODO</string>
    <string name="gambar2">0℃</string>
    <string name="gambar3">0℃</string>
    <string name="gambar7">0 mg/L</string>
    <string name="gambar9">TODO</string>
    <string name="foto1">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo">TODO</string>
    <string name="view3">%</string>
    <string name="view5">%</string>
    <string name="view7">%</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="weight">TODO</string>
    <string name="weight2">TODO</string>
    <string name="weight3">TODO</string>
    <string name="weight4">TODO</string>
    <string name="weight5">TODO</string>
    <string name="todo9">TODO</string>
    <string name="textview3">textview3</string>
    <string name="textview5">textview5</string>
    <string name="textview1">textview1</string>
    <string name="textview9">textview2</string>
    <string name="textt">%</string>
    <string name="persen">%</string>
    <string name="persen1">%</string>
    <string name="persen3">%</string>
    <string name="persen4">%</string>
    <string name="persen5">%</string>
    <string name="persen6">%</string>
    <string name="ef1">TODO</string>
    <string name="wf2">%</string>
    <string name="wf3">%</string>
    <string name="wf4">%</string>
    <string name="wf5">%</string>
    <string name="wf6">%</string>
    <string name="wf7">%</string>
    <string name="wf8">%</string>
    <string name="wf9">%</string>
    <string name="img1">%</string>
    <string name="img2">%</string>
    <string name="img4">%</string>
    <string name="img6">%</string>
    <string name="textview8">TextView</string>
    <string name="textview7">TextView</string>
    <string name="textview6">TextView</string>
    <string name="todo0">TODO</string>
    <string name="foto2">%</string>
    <string name="foto3">%</string>
    <string name="foto4">%</string>
    <string name="soil">%</string>
    <string name="soil1">%</string>
    <string name="soil2">%</string>
</resources>